create a container. use javascript to fill container with divs

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Etch-a-Sketch</title>
 </head>
 <body>
+    <container class="grid">
+    </container>
     <script src="main.js"></script>
 </body>
 </html>
