add button to clear and change grid size

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Etch-a-Sketch</title>
 </head>
 <body>
+    <h1>Etch-a-Sketch</h1>
+    <button class="size">Create a New Grid</button>
     <container class="grid">
     </container>
     <script src="main.js"></script>
